--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    git and github
+    git and github 
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur placeat possimus numquam consectetur ab quidem harum debitis ea quo quisquam tempore sequi magnam nihil a aperiam, beatae earum aliquam sapiente!</p>
 </body>
 </html>
